@@ -17,7 +17,7 @@
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
- * along with this program. If not, see <http://www.gnu.org/licenses/>.
+ * along with this program. If not, see <https://www.gnu.org/licenses/>.
  */
 package org.isf.dicom.test;
 
@@ -97,7 +97,7 @@ public class TestSqlDicomManager extends OHCoreTestCase {
 	@Test
 	public void testLoadDetailsLongObject() throws Exception {
 		long id = setupTestFileDicom(true);
-		FileDicom fileDicom = sqlDicomManager.loadDetails(new Long(id), 0, "TestSeriesNumber");
+		FileDicom fileDicom = sqlDicomManager.loadDetails(Long.valueOf(id), 0, "TestSeriesNumber");
 		testFileDicom.check(fileDicom);
 	}
 
